# opendog_quadruped

./: .gitignore  mpcnet_model_cannot_stand.md  rough_terrain_config.md  symlink_install_manifest.txt  togo_prototype_mpc_handover.md  togo_prototype_project_summary.md  togo_prototype_self_collision_hard_constraint_task.md
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/: CMakeLists.txt  package.xml  training_handover.md
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/launch/: ballbot_mpcnet.launch.py
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/ocs2_ballbot_mpcnet/: compare_onnx.py  compare_teacher_mpc.py  data_quality.py  mpcnet.py
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/src/: BallbotMpcnetDummyNode.cpp  BallbotMpcnetInterface.cpp
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/: CMakeLists.txt  package.xml
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/launch/: default.launch.py  raisim.launch.py
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/ocs2_legged_robot_mpcnet/: mpcnet.py
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/policy/: best_policy.json  best_policy.onnx  best_policy.pt
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/src/: MpcnetDummy.cpp  (+1 more)
src/ocs2_ros2/advance examples/ocs2_mpcnet/ocs2_mpcnet_core/: CMakeLists.txt  package.xml
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_anymal_commands/: CMakeLists.txt
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/: CMakeLists.txt  README.md
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_anymal_models/: CMakeLists.txt
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_anymal_mpc/: CMakeLists.txt  README.md  package.xml
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_quadruped_interface/: CMakeLists.txt
src/ocs2_ros2/advance examples/ocs2_perceptive_anymal/ocs2_quadruped_loopshaping_interface/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_ballbot/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_ballbot/test/: testBallbotPyBindings.cpp
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/launch/: ballbot_ddp.launch.py  ballbot_mpc_mrt.launch.py  ballbot_slp.launch.py  ballbot_sqp.launch.py  visualize.launch.py
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/src/: BallbotDdpMpcNode.cpp  BallbotMpcMrtNode.cpp  BallbotSlpMpcNode.cpp  BallbotSqpMpcNode.cpp  DummyBallbotNode.cpp
src/ocs2_ros2/basic examples/ocs2_ballbot_ros/test/: ballbotIntegrationTest.cpp
src/ocs2_ros2/basic examples/ocs2_cartpole/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_cartpole/test/: testCartpole.cpp
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/launch/: cartpole.launch.py  visualize.launch.py
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/rviz/: cartpole.rviz
src/ocs2_ros2/basic examples/ocs2_cartpole_ros/src/: CartpoleMpcNode.cpp  DummyCartpoleNode.cpp
src/ocs2_ros2/basic examples/ocs2_double_integrator/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_double_integrator/test/: DoubleIntegratorPyBindingTest.cpp
src/ocs2_ros2/basic examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_double_integrator_ros/launch/: double_integrator.launch.py
src/ocs2_ros2/basic examples/ocs2_double_integrator_ros/src/: DoubleIntegratorMpcNode.cpp  DummyDoubleIntegratorNode.cpp
src/ocs2_ros2/basic examples/ocs2_legged_robot/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_legged_robot_ros/launch/: basic.launch.py  legged_robot_ddp.launch.py  legged_robot_ipm.launch.py  legged_robot_sqp.launch.py
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/src/: FactoryFunctions.cpp  MobileManipulatorInterface.cpp  MobileManipulatorPinocchioMapping.cpp  MobileManipulatorPreComputation.cpp
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator/test/: testDummyMobileManipulator.cpp  testEndEffectorConstraint.cpp  testSelfCollision.cpp
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt  package.xml
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator_ros/launch/: manipulator_kinova_j2n6.launch.py  manipulator_kinova_j2n7.launch.py  manipulator_mabi_mobile.launch.py  manipulator_ridgeback_ur5.launch.py
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator_ros/rviz/: mobile_manipulator.rviz
src/ocs2_ros2/basic examples/ocs2_mobile_manipulator_ros/src/: EnvironmentCollisionVisualization.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorSqpMpcNode.cpp  MobileManipulatorTarget.cpp
src/ocs2_ros2/basic examples/ocs2_quadrotor/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_quadrotor/test/: PyBindingsTest.cpp
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/: CMakeLists.txt
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/launch/: quadrotor.launch.py  visualize.launch.py
src/ocs2_ros2/basic examples/ocs2_quadrotor_ros/src/: DummyQuadrotorNode.cpp  QuadrotorDummyVisualization.cpp  QuadrotorMpcNode.cpp
src/ocs2_ros2/core/ocs2_oc/: CMakeLists.txt
src/ocs2_ros2/core/ocs2_thirdparty/: CMakeLists.txt  package.xml
src/ocs2_ros2/mpc/ocs2_ddp/: CMakeLists.txt
src/ocs2_ros2/mpc/ocs2_ipm/: CMakeLists.txt
src/ocs2_ros2/mpc/ocs2_slp/: CMakeLists.txt
src/ocs2_ros2/robotics/ocs2_python_interface/: CMakeLists.txt  package.xml
src/ocs2_ros2/robotics/ocs2_robotic_tools/: CMakeLists.txt
src/ocs2_ros2/robotics/ocs2_ros_interfaces/: CMakeLists.txt  package.xml
src/ocs2_ros2/robotics/ocs2_ros_interfaces/launch/: ocs2_launch_utils.py
src/ocs2_ros2/submodules/ocs2_robotic_assets/: CMakeLists.txt
(+628 files in other folders)
